--- a/home-manager/modules/waypaper/config.ini
+++ b/home-manager/modules/waypaper/config.ini
@@ -3,7 +3,7 @@ language = en
 folder = ~/Pictures/Wallpapers/
 monitors = All
 wallpaper = ~/Pictures/Wallpapers/wallpaper.png
-backend = hyprpaper 
+backend = swaybg 
 fill = fill
 sort = name
 color = #ffffff
