configured notification module for waybar

--- a/home-manager/modules/waybar/config.jsonc
+++ b/home-manager/modules/waybar/config.jsonc
@@ -2,9 +2,9 @@
 	// Base
 	"height": 34,
 	"width": 1280,
+	"layer": "top",
 	"spacing": 15,
-  "start_hidden": true,
-  "ipc": true,
+	"ipc": true,
 	"margin-top": 5,
 
 	// Placement 
@@ -16,6 +16,7 @@
 		"niri/workspaces"
 	],
 	"modules-right": [
+		"custom/notification",
 		"niri/language",
 		"memory",
 		"cpu",
@@ -52,6 +53,28 @@
 	"memory": {
 		"interval": 30,
 		"format": "{percentage}% "
+	},
+
+	// Notifications
+	"custom/notification": {
+		"tooltip": false,
+		"format": "{} {icon}",
+		"format-icons": {
+			"notification": "<span foreground='red'><sup></sup></span>",
+			"none": "",
+			"dnd-notification": "<span foreground='red'><sup></sup></span>",
+			"dnd-none": "",
+			"inhibited-notification": "<span foreground='red'><sup></sup></span>",
+			"inhibited-none": "",
+			"dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
+			"dnd-inhibited-none": ""
+		},
+		"return-type": "json",
+		"exec-if": "which swaync-client",
+		"exec": "swaync-client -swb",
+		"on-click": "swaync-client -t -sw",
+		"on-click-right": "swaync-client -d -sw",
+		"escape": true
 	}
 }
 
