--- a/home-manager/modules/waybar/config.jsonc
+++ b/home-manager/modules/waybar/config.jsonc
@@ -1,33 +1,64 @@
 {
 	// Base
-	"height": 34,
-	"width": 1280,
+	"height": 28,
 	"layer": "top",
 	"spacing": 15,
 	"ipc": true,
-	"margin-top": 5,
 
 	// Placement 
 	"modules-left": [
-		"hyprland/window"
+		"hyprland/workspaces"
 	],
 
 	"modules-center": [
-		"hyprland/workspaces"
+		"hyprland/window"
 	],
 	"modules-right": [
 		"custom/notification",
+		"custom/spacer",
+		"pulseaudio",
+		"custom/spacer",
 		"memory",
+		"custom/spacer",
 		"cpu",
+		"custom/spacer",
 		"clock"
 	],
 
 	// Modules
 
-	// hyprland modules
+	"custom/spacer": {
+		"tooltip": false,
+		"format": "|"
+	},
 
-	"hyprland/language": {
-		"format": "{short}"
+	"pulseaudio": {
+		"format": "{volume}% {icon} ",
+		"format-bluetooth": "{volume}% {icon} ",
+		"format-muted": "",
+		"format-icons": {
+			"alsa_output.pci-0000_00_1f.3.analog-stereo": "",
+			"alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
+			"headphone": "",
+			"hands-free": "",
+			"headset": "",
+			"phone": "",
+			"phone-muted": "",
+			"portable": "",
+			"car": "",
+			"default": ["", ""]
+		},
+		"scroll-step": 1,
+		"on-click": "pwvucontrol"
+	},
+
+	// hyprland modules
+	
+	"hyprland/workspaces": {
+		"format": "{name}",
+		"persistent-workspaces": {
+			"*": 9
+		}
 	},
 
 	// Base modules
@@ -39,18 +70,18 @@
 	// Hardware
 	"cpu": {
 		"interval": 10,
-		"format": "{usage}% "
+		"format": "{usage}%  "
 	},
 
 	"memory": {
 		"interval": 30,
-		"format": "{percentage}% "
+		"format": "{percentage}%  "
 	},
 
 	// Notifications
 	"custom/notification": {
 		"tooltip": false,
-		"format": "{} {icon}",
+		"format": "{} {icon} ",
 		"format-icons": {
 			"notification": "<span foreground='red'><sup></sup></span>",
 			"none": "",
