--- a/home-manager/modules/tmux/tmux.conf
+++ b/home-manager/modules/tmux/tmux.conf
@@ -21,6 +21,7 @@ setw -g mode-keys vi
 # Binds
 set -g prefix C-a
 bind q killp
+bind v copy-mode
 
 # Renames
 bind-key r command-prompt -I "#W" "rename-window -- '%%'"
