--- a/home-manager/modules/waypaper/config.ini
+++ b/home-manager/modules/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Pictures/Wallpapers/
 monitors = All
-wallpaper = ~/Pictures/Wallpapers/wallpaper.png
+wallpaper = ~/Pictures/Wallpapers/wallpaper.jpg
 backend = swaybg 
 fill = fill
 sort = name
